--- a/.github/workflowsplantumlClassDiagram.yml
+++ b/.github/workflowsplantumlClassDiagram.yml
@@ -12,3 +12,4 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "Auto-generated PlantUML diagram"
+          file_pattern: "*.png *.svg"
