Third attempt to make the workflow work

--- a/.github/workflowsplantumlClassDiagram.yml
+++ b/.github/workflowsplantumlClassDiagram.yml
@@ -3,6 +3,8 @@ on: push
 jobs:
   render:
     runs-on: ubuntu-latest
+    permissions:  # Add this block
+     contents: write  # Allows committing files
     steps:
       - uses: actions/checkout@v4
       - name: Generate diagram
